tests/rosetta/out/Kotlin/anagrams-deranged-anagrams.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/anagrams-deranged-anagrams.kt:82:24: error: unresolved reference: keys
        for (c in m[k].keys) {
                       ^
/tmp/anagrams-deranged-anagrams.kt:90:16: error: type inference failed. Please try to specify type arguments explicitly.
        m[k] = append(m[k], w)
               ^
/tmp/anagrams-deranged-anagrams.kt:90:23: error: type mismatch: inferred type is MutableList<String>? but MutableList<String> was expected
        m[k] = append(m[k], w)
                      ^
